# StickiNote

./: CMakeLists.txt  Readme.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  LVGL_WidgetManager.cpp  NVSManager.cpp  SplashScreen.cpp  idf_component.yml  main.cpp
main/include/: LVGL_WidgetManager.hpp  NVSManager.hpp  SplashScreen.hpp
main/ui_resources/: icon_resize.c  notes.c  sticky_font_32.c
